@@ -1,6 +1,12 @@
 2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_style.c (murrine_style_draw_shadow),
+	(murrine_style_draw_box_gap), (murrine_style_draw_box):
+	Better code
+
+2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_style.c (murrine_style_draw_shadow),
 	(murrine_style_draw_box):
 	Fix the check to also fill the background if the widget is NULL.
 
